# py-optional-tasks

./: CHANGELOG.md  README.md  setup.cfg
src/optional_tasks/: __main__.py  args.py  exceptions.py  files.py  optional_tasks.py  task.py  tasks.py  times.py
src/python_app/: __main__.py
tests/: test_optional_tasks.py  test_python_app.py
