[metadata]
name = python-app
version = 0.1
author = IceArrow256
author_email = icearrow256@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IceArrow256/python-app
project_urls =
    Bug Tracker = https://github.com/IceArrow256/python-app/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
test_suite = tests

[options.entry_points]
console_scripts =
    python-app = python_app.__main__:main

[options.packages.find]
where = src
