[metadata]
name = optional-tasks
version = 0.3
author = IceArrow256
author_email = icearrow256@gmail.com
description = A to-do list for optional task
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IceArrow256/optional-tasks
project_urls =
    Bug Tracker = https://github.com/IceArrow256/optional-tasks/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
test_suite = tests
install_requires =
    appdirs

[options.entry_points]
console_scripts =
    optional-tasks = optional_tasks.__main__:main

[options.packages.find]
where = src
